# oathgate

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
oathgate/: Cargo.toml
oathgate-bridge/: Cargo.toml
oathgate-bridge/src/: bin.rs  config.rs  error.rs  lib.rs  main.rs  net.rs  router.rs
oathgate-bridge/src/config/: dhcp.rs
oathgate-bridge/src/net/: dhcp.rs  error.rs  router.rs  switch.rs  wan.rs
oathgate-bridge/src/net/router/: handler.rs  local.rs
oathgate-bridge/src/net/router/handler/: icmp.rs  udp.rs
oathgate-bridge/src/net/wan/: tap.rs  udp.rs  wireguard.rs
oathgate-bridge/src/router/: handler.rs  switch.rs  wan.rs
oathgate-bridge/src/router/wan/: tap.rs  udp.rs  wireguard.rs
oathgate-fabrial/: Cargo.toml
oathgate-fabrial/debian/: service
oathgate-fabrial/src/: error.rs  lib.rs  main.rs  tty.rs
oathgate-net/: Cargo.toml
oathgate-net/src/: ipv4.rs  lib.rs  nat.rs  protocols.rs  router.rs  types.rs
oathgate-net/src/protocols/: arp.rs  icmp.rs  udp.rs
oathgate-net/src/router/: handler.rs  switch.rs  wan.rs
oathgate-net/src/router/handler/: icmp.rs
oathgate-net/src/router/wan/: tap.rs  udp.rs  wireguard.rs
oathgate-net/src/types/: mac.rs  netaddress.rs
oathgate-runner/: Cargo.toml
oathgate-runner/src/: bin.rs  config.rs  events.rs  hypervisor.rs  lib.rs  main.rs  pty.rs  tui.rs  vm.rs
oathgate-runner/src/hypervisor/: terminal.rs  vm.rs
oathgate-runner/src/pty/: fabrial.rs  pipe.rs
oathgate-runner/src/tui/: events.rs
oathgate-tui/: Cargo.toml
oathgate-tui/src/: main.rs  vm.rs
oathgate-vhost/: Cargo.toml
oathgate-vhost/src/: config.rs  device.rs  error.rs  main.rs  queue.rs  router.rs  vhost.rs
oathgate-vhost/src/device/: poller.rs
oathgate-vhost/src/router/: handler.rs  switch.rs  wan.rs
oathgate-vhost/src/router/handler/: icmp.rs
oathgate-vhost/src/router/wan/: tap.rs  udp.rs  wireguard.rs
oathgate/src/: cmd.rs  database.rs  fork.rs  logger.rs  main.rs  process.rs
oathgate/src/cmd/: bridge.rs  image.rs  kernel.rs  shard.rs  template.rs
oathgate/src/cmd/shard/: fabrial.rs
oathgate/src/database/: device.rs  image.rs  kernel.rs  log.rs  migration.rs  shard.rs
src/: config.rs  device.rs  error.rs  main.rs  queue.rs  router.rs  types.rs  upstream.rs
src/device/: poller.rs
src/router/: local.rs  protocols.rs
src/upstream/: tap.rs  udp.rs  wireguard.rs
upstreams/udp-dummy/: Cargo.toml
upstreams/udp-dummy/src/: main.rs
