[workspace]
members = [
    "oathgate-bridge",
    "oathgate-net",
    "oathgate-tui",
    "oathgate-vhost",
    "upstreams/udp-dummy"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
flume = { version = "0.11.0", default-features = false, features = ["eventual-fairness"] }
mio = { version = "0.8.11", features = ["net", "os-poll", "os-ext"] }
nix = { version = "0.28.0", features = ["socket", "uio", "mman", "ioctl", "net", "time", "signal", "pthread", "term"] }
parking_lot = "0.12.2"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
thiserror = "1.0.59"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
