[package]
name = "oathgate-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
mio = { workspace = true }
nix = { workspace = true }
oathgate-net = { path = "../oathgate-net" }
oathgate-vhost = { path = "../oathgate-vhost" }
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
