[package]
name = "oathgate-fabrial"
description = "Provides a TTY and other interactive services inside a VM"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kevin Allison"]

[features]
client = ["crossterm"]

[[bin]]
name = "fabrial-client"
path = "src/bin/fabrial-client.rs"
required-features = ["client"]

#[[bin]]
#name = "fabrial-server"

[lib]
name = "fabrial"
path = "src/lib.rs"

[package.metadata.deb]
revision = "4"
maintainer-scripts = "debian/"
systemd-units = { enable = true }

[dependencies]
clap = { workspace = true }
crossterm = { version = "0.27", optional = true }
mio = { workspace = true }
nix = { workspace = true }
oathgate-net = { path = "../oathgate-net" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
