[package]
name = "oathgate-runner"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oathgate-runner"
path = "src/bin.rs"

[dependencies]
clap = { workspace = true }
crossterm = "0.27.0"
mio = { workspace = true }
nix = { workspace = true }
oathgate-net = { path = "../oathgate-net" }
parking_lot = { workspace = true }
ratatui = "0.26.3"
regex = "1.10.4"
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tui-term = "0.1.11"
