[package]
name = "oathgate-vhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitflags = "2.5.0"
clap = { workspace = true }
flume = { workspace = true }
mio = { workspace = true }
nix = { workspace = true }
oathgate-net = { path = "../oathgate-net" }
parking_lot = { workspace = true }
rand = { workspace =  true }
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
virtio-queue = "0.12.0"
vm-memory = { version = "0.14.1", features = ["backend-mmap", "backend-atomic"] }
