[package]
name = "oathgate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { workspace = true }
console = "0.15.8"
dialoguer = "0.11.0"
names = { version = "0.14.0", default-features = false }
nix = { workspace = true }
oathgate-bridge = { path = "../oathgate-bridge" }
oathgate-runner = { path = "../oathgate-runner" }
parking_lot = { workspace = true }
rusqlite = { version = "0.31.0", features = ["uuid"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8", features = ["v7"] }
