[package]
name = "oathgate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { workspace = true }
console = "0.15.8"
crossterm = "0.27"
dialoguer = "0.11.0"
flate2 = "1.0.30"
indicatif = "0.17.8"
mio = { workspace = true }
names = { version = "0.14.0", default-features = false }
nix = { workspace = true }
oathgate-bridge = { path = "../oathgate-bridge" }
oathgate-runner = { path = "../oathgate-runner" }
parking_lot = { workspace = true }
rand.workspace = true
rusqlite = { version = "0.31.0", features = ["serde_json", "time", "uuid"] }
serde = { workspace = true }
serde_json = "1.0.117"
tar = "0.4.41"
time = { version = "0.3.36", features = ["formatting", "serde", "std"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.8", features = ["v4", "v7"] }
